syntax = "proto3";

import "google/protobuf/timestamp.proto";

package product;
option go_package = "./";

message Product {
    string ProductID = 1;
    string CategoryID = 2;
    string Name = 3;
    string Description = 4;
    double Price = 5;
    string ImageURl = 6;
    repeated string Photos = 7;
    int64 Quantity = 8;
    int64 Rating = 9;
    google.protobuf.Timestamp CreatedAt = 10;
    google.protobuf.Timestamp UpdatedAt = 11;
}

message Empty{}

message CreateRequest {
    string CategoryID = 1;
    string Name = 2;
    string Description = 3;
    double Price = 4;
    string ImageURL = 5;
    repeated string Photos = 6;
    int64 Quantity = 7;
    int64 Rating = 8;
}

message CreateResponse {
    Product Product = 1;
}

message UpdateRequest {
    string ProductID = 1;
    string CategoryID = 2;
    string Name = 3;
    string Description = 4;
    double Price = 5;
    string ImageURL = 6;
    repeated string Photos = 7;
    int64 Quantity = 8;
    int64 Rating = 9;
}


message UpdateResponse {
    Product Product = 1;
}

message GetByIDRequest {
    string ProductID = 1;
}

message GetByIDResponse {
    Product Product = 1;
}

message SearchReq {
    string Search = 1;
    int64 page = 2;
    int64 size = 3;
}

message SearchResponse {
    int64 TotalCount = 1;
    int64 TotalPages = 2;
    int64 Page = 3;
    int64 Size = 4;
    bool HasMore = 5;
    repeated Product Product = 6;
}

service productsService{
    rpc Create (CreateRequest) returns (CreateResponse){}

    rpc Update (UpdateRequest) returns (UpdateResponse){}

    rpc GetByID (GetByIDRequest) returns (GetByIDResponse){}

    rpc Search (SearchReq) returns (SearchResponse){}
}